include info box

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>AdminLTE 3 | Blank Page</title>
+    <title>Invoice Notification System</title>
     <!-- Google Font: Source Sans Pro -->
     <link
       rel="stylesheet"
@@ -62,6 +62,7 @@
     />
   </head>
   <body class="hold-transition sidebar-mini layout-fixed">
+    <div className="wrapper">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
